# CIL

./: .astylerc  .clang-format  .gitignore  CMakeLists.txt  ImageInfo.hpp  Makefile.am  README.md  configure.ac
.github/workflows/: automake.yml  cmake.yml
examples/: compare.cpp  crop.cpp  gradient.cpp  objects.cpp  plainPPM.cpp
include/: Makefile.am  temp.cpp
include/CIL/: Color.hpp  Drawing.hpp  ImageHandler.hpp  ImageInfo.hpp  ImageMatrix.hpp  Pixel.hpp  ThreadHandler.hpp  Transformations.hpp
include/CIL/Core/: DetachedFPPixel.hpp  Utils.hpp
include/CIL/JPEG/: JPEGCore.hpp  JPEGHandler.hpp
include/CIL/PNG/: PNGHandler.hpp
include/CIL/PPM/: PPMHandler.hpp
include/CIL/RayTracing/: Background.hpp  Camera.hpp  HitInfo.hpp  Materials.hpp  Object.hpp  Ray.hpp  Sphere.hpp  Vector3D.hpp  World.hpp
lib/: CMakeLists.txt  Color.cpp  Drawing.cpp  ImageHandler.cpp  ImageInfo.cpp  ImageMatrix.cpp  Pixel.cpp  Transformations.cpp
lib/Core/: DetachedFPPixel.cpp  Utils.cpp
lib/JPEG/: JPEGCore.cpp  JPEGHandler.cpp
lib/PNG/: PNGCore.cpp  PNGHandler.cpp
lib/PPM/: PPMHandler.cpp
tests/: CMakeLists.txt  Makefile.am  colormap.cpp  crop.cpp  flip.cpp  rotate.cpp
tests/results/: crop-1.ppm  flip-1.ppm  rotate-1.ppm
tools/: CMakeLists.txt
