include_HEADERS = CIL/ImageInfo.hpp CIL/ImageMatrix.hpp CIL/Pixel.hpp \
	CIL/Transformations.hpp CIL/Drawing.hpp CIL/Color.hpp CIL/ThreadHandler.hpp \
	CIL/ImageHandler.hpp

include_HEADERS += CIL/RayTracing/Background.hpp CIL/RayTracing/Camera.hpp \
	CIL/RayTracing/HitInfo.hpp CIL/RayTracing/Object.hpp CIL/RayTracing/Ray.hpp \
	CIL/RayTracing/Sphere.hpp CIL/RayTracing/Vector3D.hpp CIL/RayTracing/World.hpp \
	CIL/RayTracing/Materials.hpp

